- Homepage-Teaser werden jetzt auch per JS begrenzt.
- Das Verwenden verschiedener Formate in einer Bildergruppe ist jetzt erlaubt.
- Veröffentlichungs- und Zurückziehscript eingebunden.
- Spezieller Workflow für Assets (derzeit nur Bilder).
- Zeitgesteuertes veröffentlichen/zurückziehen.
- Unterressort auswählen funktioniert jetzt ohne vorherigem Speichern des
  Ressorts (bug #4268).


0.9.17 (2008-06-10)
-------------------

- Suche stirbt nicht mehr an Umlauten (bug #4195).
- WYSIWYG-Editor: Listen werden jetzt korrekt unterstützt (bug #4223).
- Datums/Zeit-Felder haben jetzt Knöpfe für "in einer Woche" und "in einem
  Monat".
- Neue Defaults für nicht-angezeigte Ordner (bug #4229).
- Defaults für Syndizierungsziele (bug #4229).
- Es gibt jetzt die Möglichkeit den Typ von Objekten im UI zu ändern.
- Beim Bearbeiten/Aus-/Einchecken werden Processing-Instructiongs nicht mehr
  gelöscht (bug #4258).
- Aktion zum expliziten invalidieren des Caches eines Ordners.
- Link-Objekt wird nach dem Anlegen auch automatisch ausgecheckt (bug #4254).
- Asset-View refaktoriert: Links haben jetzt auch einen Asset-View.
- Channels verstehen jetzt <block>s mit einem externen HREF. Diese Blöcke
  werden angezeigt und können sortiert/entfernt werden (bug #4259).

0.9.16 (2008-05-29)
-------------------

- Anlegen von Objekten mit Umlauten oder anderen wirren Zeichen führt nicht
  mehr zum Systemfehler sondern gibt "Einschrankung nicht erfüllt" aus (bug
  #4166).
- Zweite Biga-Referenz im Artikel
- Aus einem Channel können Objekte jetzt gelöscht werden (bug #4179).
- Wird ein falsches Objekt bei den Assets referenziert gibt es jetzt eine
  sinnvolle Fehlermeldung anstatt "Raised if Validaiont fails" (bug #4174).
- Objekte Referenzieren: Wenn der Pfeil -> mit aktivem Shift, Ctrl oder Meta
  gedrückt wird geht ein neues Tab/Fenster auf (bug #4175).
- Auf der Biga gibt es jetzt einen Link zum Bild (bug #4180).
- Der HTML-Titel im CMS beinhaltet jetzt den Titel des Objekts (bug #4152). 