@@ -13,6 +13,8 @@ zeit.cms changes
 - Zeitgesteuertes veröffentlichen/zurückziehen.
 - Unterressort auswählen funktioniert jetzt ohne vorherigem Speichern des
   Ressorts (bug #4268).
+- Keyword-Typeahead rennt jetzt nicht mehr bei jedem Buchstaben zum Server;
+  außerdem wird das Ergebnis vom Browser gecacht (bug 4270).
 
 
 0.9.17 (2008-06-10)
